--- a/src/dynamic-preprocessors/reputation/Makefile.in
+++ b/src/dynamic-preprocessors/reputation/Makefile.in
@@ -349,8 +349,9 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 dynamicpreprocessordir = ${libdir}/snort_dynamicpreprocessor
 dynamicpreprocessor_LTLIBRARIES = libsf_reputation_preproc.la
-libsf_reputation_preproc_la_LDFLAGS = -export-dynamic -module @XCCFLAGS@
-@SO_WITH_STATIC_LIB_TRUE@libsf_reputation_preproc_la_LIBADD = ../libsf_dynamic_preproc.la
+lib_LTLIBRARIES = libsf_reputation_preproc.la
+libsf_reputation_preproc_la_LDFLAGS = -export-dynamic -module -lGeoIP @XCCFLAGS@
+@SO_WITH_STATIC_LIB_TRUE@libsf_reputation_preproc_la_LIBADD = ../libsf_dynamic_preproc.la -lGeoIP
 @SO_WITH_STATIC_LIB_FALSE@nodist_libsf_reputation_preproc_la_SOURCES = \
 @SO_WITH_STATIC_LIB_FALSE@../include/sf_dynamic_preproc_lib.c \
 @SO_WITH_STATIC_LIB_FALSE@../include/sf_ip.c \
