FIX: reputation plugin did not manage inter-library dependency

--- a/src/dynamic-preprocessors/reputation/Makefile.am
+++ b/src/dynamic-preprocessors/reputation/Makefile.am
@@ -7,9 +7,9 @@ libdir = ${exec_prefix}/lib/snort_dynamicpreprocessor
 
 lib_LTLIBRARIES = libsf_reputation_preproc.la
 
-libsf_reputation_preproc_la_LDFLAGS = -export-dynamic -module @XCCFLAGS@
+libsf_reputation_preproc_la_LDFLAGS = -export-dynamic -module -lGeoIP @XCCFLAGS@
 if SO_WITH_STATIC_LIB
-libsf_reputation_preproc_la_LIBADD = ../libsf_dynamic_preproc.la
+libsf_reputation_preproc_la_LIBADD = ../libsf_dynamic_preproc.la -lGeoIP
 else
 nodist_libsf_reputation_preproc_la_SOURCES = \
 ../include/sf_dynamic_preproc_lib.c \
