--- a/configure.in
+++ b/configure.in
@@ -902,16 +902,13 @@ if test "x$enable_reputationgeoip" = "xyes"; then
         LDFLAGS="${LDFLAGS} -L${with_geoip_libraries}"
         GEOIP_LIB="yes"
     else
+        LIBBAK="$LIBS"
         AC_CHECK_LIB(GeoIP, GeoIP_open, GEOIP_LIB="yes", GEOIP_LIB="no")
-    fi
-
-    if test "x$GEOIP_LIB" != "xno"; then
-        if test "x$GEOIP_HEADERS" != "xno"; then
-            CPPFLAGS="$CPPFLAGS -DREPUTATION_GEOIP"
-            LIBS="$LIBS -lGeoIP"
-        fi
+        LIBS="$LIBBAK"
     fi
 fi
+
+
 
 AC_ARG_ENABLE(lzma,
 [  --disable-lzma           Disable LZMA Decompression],
