--- a/configure.in
+++ b/configure.in
@@ -908,7 +908,44 @@ if test "x$enable_reputationgeoip" = "xyes"; then
     fi
 fi
 
+AC_ARG_ENABLE(remote-file-s3,
+[  --enable-remote-file-s3  Enable S3 file saving (implies s3 libs)],
+       enable_file_s3="$enableval", enable_file_s3="no")
 
+AC_ARG_WITH(libs3-includes,
+    [  --with-libs3-includes=DIR      libs3 include directory],
+    [with_libs3_includes="$withval"],[with_libs3_includes="no"])
+
+AC_ARG_WITH(libs3-libraries,
+    [  --with-libs3-libraries=DIR     libs3 library directory],
+    [with_libs3_libraries="$withval"],[with_libs3_libraries="no"])
+
+AM_CONDITIONAL(HAVE_S3FILE, test "x$enable_file_s3" = "xyes")
+if test "x$enable_file_s3" = "xyes"; then
+    if test "x$with_libs3_includes" != "xno"; then
+        CPPFLAGS="${CPPFLAGS} -I${with_libs3_includes}"
+        LIBS3_HEADERS="yes"
+    else
+        AC_CHECK_HEADERS(libs3.h, LIBS3_HEADERS="yes", LIBS3_HEADERS="no")
+    fi
+
+    if test "x$with_libs3_libraries" != "xno"; then
+        LDFLAGS="${LDFLAGS} -L${with_libs3_libraries}"
+        LIBS3_LIB="yes"
+    else
+        LIBS_BAK=$LIBS
+        LIBS="$LIBS -lxml2"
+        AC_CHECK_LIB(s3, S3_initialize, LIBS3_LIB="yes", LIBS3_LIB="no")
+        LIBS="$LIBS_BAK"
+    fi
+
+    if test "x$LIBS3_LIB" == "xno" -o "x$LIBS3_HEADERS" == "xno"; then
+      echo
+      echo "   ERROR!  libs3 not found."
+      echo
+      exit 1
+    fi
+fi
 
 AC_ARG_ENABLE(lzma,
 [  --disable-lzma           Disable LZMA Decompression],
