--- a/config.h.in
+++ b/config.h.in
@@ -58,6 +58,9 @@
 /* Define to 1 if you have the <dumbnet.h> header file. */
 #undef HAVE_DUMBNET_H
 
+/* ExtraData File collection */
+#undef HAVE_EXTRADATA_FILE
+
 /* Define to 1 if you have the `inet_ntop' function. */
 #undef HAVE_INET_NTOP
 
