--- a/src/dynamic-preprocessors/Makefile.in
+++ b/src/dynamic-preprocessors/Makefile.in
@@ -89,20 +89,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@am__append_1 = include/sfprimetable.c include/sfxhash.c include/sfmemcap.c include/sfghash.c \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@						  include/sfhashfcn.c include/sflsq.c include/md5.c
-
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@am__append_2 = include/sfprimetable.h include/sfxhash.h include/sfmemcap.h include/sfghash.h \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@						  include/sfhashfcn.h include/sflsq.h include/md5.h
-
-@FEAT_OPEN_APPID_TRUE@am__append_3 = include/sfprimetable.h include/sfprimetable.c include/sfxhash.h include/sfxhash.c include/sfmemcap.h include/sfmemcap.c \
-@FEAT_OPEN_APPID_TRUE@				 include/sfghash.c include/sfhashfcn.c include/sflsq.h include/sflsq.c \
-@FEAT_OPEN_APPID_TRUE@				 include/md5.h include/md5.c 
-
-@FEAT_OPEN_APPID_TRUE@am__append_4 = appid
-@FEAT_OPEN_APPID_TRUE@am__append_5 = include/sfprimetable.h include/sfxhash.h include/sfmemcap.h include/sfhashfcn.h \
-@FEAT_OPEN_APPID_TRUE@				  include/md5.h 
-
+@FEAT_OPEN_APPID_TRUE@am__append_1 = appid
 subdir = src/dynamic-preprocessors
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
@@ -153,13 +140,15 @@ am__libsf_dynamic_preproc_la_SOURCES_DIST = ssl_common/ssl.c \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-ssl_config.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-ssl_inspect.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-ssl_ha.lo
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@am__objects_1 = libsf_dynamic_preproc_la-sfprimetable.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfxhash.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfmemcap.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfghash.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfhashfcn.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sflsq.lo \
-@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-md5.lo
+@SO_WITH_STATIC_LIB_TRUE@am__objects_1 = libsf_dynamic_preproc_la-sfprimetable.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfxhash.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfmemcap.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfghash.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfhashfcn.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sflsq.lo \
+@SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-md5.lo
+@FEAT_FILE_INSPECT_FALSE@@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@am__objects_2 = $(am__objects_1)
+@FEAT_FILE_INSPECT_TRUE@@SO_WITH_STATIC_LIB_TRUE@am__objects_2 = $(am__objects_1)
 @SO_WITH_STATIC_LIB_TRUE@nodist_libsf_dynamic_preproc_la_OBJECTS = libsf_dynamic_preproc_la-sf_dynamic_preproc_lib.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sf_ip.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfrt.lo \
@@ -174,7 +163,7 @@ am__libsf_dynamic_preproc_la_SOURCES_DIST = ssl_common/ssl.c \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sf_base64decode.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sf_email_attach_decode.lo \
 @SO_WITH_STATIC_LIB_TRUE@	libsf_dynamic_preproc_la-sfparser.lo \
-@SO_WITH_STATIC_LIB_TRUE@	$(am__objects_1)
+@SO_WITH_STATIC_LIB_TRUE@	$(am__objects_2)
 libsf_dynamic_preproc_la_OBJECTS =  \
 	$(am_libsf_dynamic_preproc_la_OBJECTS) \
 	$(nodist_libsf_dynamic_preproc_la_OBJECTS)
@@ -341,7 +330,6 @@ LIBTOOL = @LIBTOOL@
 LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
-LT_SYS_LIBRARY_PATH = @LT_SYS_LIBRARY_PATH@
 LUA_CFLAGS = @LUA_CFLAGS@
 LUA_LIBS = @LUA_LIBS@
 MAINT = @MAINT@
@@ -362,9 +350,6 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PKG_CONFIG = @PKG_CONFIG@
-PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
-PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -415,8 +400,6 @@ libdir = @libdir@
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
-luajit_CFLAGS = @luajit_CFLAGS@
-luajit_LIBS = @luajit_LIBS@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
@@ -455,7 +438,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 @SO_WITH_STATIC_LIB_TRUE@	include/util_unfold.c \
 @SO_WITH_STATIC_LIB_TRUE@	include/sf_base64decode.c \
 @SO_WITH_STATIC_LIB_TRUE@	include/sf_email_attach_decode.c \
-@SO_WITH_STATIC_LIB_TRUE@	libs/sfparser.c $(am__append_1)
+@SO_WITH_STATIC_LIB_TRUE@	libs/sfparser.c $(SFXHASH_SRC)
 @SO_WITH_STATIC_LIB_TRUE@preprocdir = $(pkgincludedir)/dynamic_preproc
 @SO_WITH_STATIC_LIB_TRUE@preproc_HEADERS = \
 @SO_WITH_STATIC_LIB_TRUE@ssl_common/ssl.h \
@@ -505,7 +488,17 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 @SO_WITH_STATIC_LIB_TRUE@	include/mpse_methods.h \
 @SO_WITH_STATIC_LIB_TRUE@	include/sfdebug.h \
 @SO_WITH_STATIC_LIB_TRUE@	include/sip_common.h include/appId.h \
-@SO_WITH_STATIC_LIB_TRUE@	$(am__append_2)
+@SO_WITH_STATIC_LIB_TRUE@	$(SFXHASH_HDR)
+@SO_WITH_STATIC_LIB_TRUE@SFXHASH_SRC_DEF = include/sfprimetable.c include/sfxhash.c include/sfmemcap.c include/sfghash.c \
+@SO_WITH_STATIC_LIB_TRUE@						  include/sfhashfcn.c include/sflsq.c include/md5.c
+
+@SO_WITH_STATIC_LIB_TRUE@SFXHASH_HDR_DEF = include/sfprimetable.h include/sfxhash.h include/sfmemcap.h include/sfghash.h \
+@SO_WITH_STATIC_LIB_TRUE@						  include/sfhashfcn.h include/sflsq.h include/md5.h
+
+@FEAT_FILE_INSPECT_TRUE@@SO_WITH_STATIC_LIB_TRUE@SFXHASH_SRC = $(SFXHASH_SRC_DEF)
+@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@SFXHASH_SRC = $(SFXHASH_SRC_DEF)
+@FEAT_FILE_INSPECT_TRUE@@SO_WITH_STATIC_LIB_TRUE@SFXHASH_HDR = $(SFXHASH_HDR_DEF)
+@FEAT_OPEN_APPID_TRUE@@SO_WITH_STATIC_LIB_TRUE@SFXHASH_HDR = $(SFXHASH_HDR_DEF)
 BUILT_SOURCES = include/snort_bounds.h include/snort_debug.h \
 	include/preprocids.h include/profiler.h include/cpuclock.h \
 	include/sf_dynamic_common.h include/sf_dynamic_engine.h \
@@ -546,7 +539,7 @@ BUILT_SOURCES = include/snort_bounds.h include/snort_debug.h \
 	ssl_common/ssl_session.h ssl_common/ssl_inspect.h \
 	ssl_common/ssl_inspect.c ssl_common/ssl_ha.h \
 	ssl_common/ssl_ha.c libs/sfparser.c libs/sfcommon.h \
-	$(am__append_3)
+	$(SFXHASH_HDR) $(SFXHASH_SRC)
 sed_ipv6_headers = \
 	sed -e "s/->iph->ip_src/->ip4_header->source/" \
 	    -e "s/->iph->ip_dst/->ip4_header->destination/" \
@@ -684,7 +677,7 @@ copy_treenode_header = \
 
 @FEAT_FILE_INSPECT_TRUE@FILE_INSPECT_DIR = file
 SUBDIRS = . libs ftptelnet pop imap smtp ssh dns ssl dcerpc2 sdf sip \
-	reputation gtp modbus dnp3 $(FILE_INSPECT_DIR) $(am__append_4)
+	reputation gtp modbus dnp3 $(FILE_INSPECT_DIR) $(am__append_1)
 EXTRA_DIST = \
 dynamic_preprocessors.dsp \
 sf_dynamic_initialize/sf_dynamic_initialize.dsp \
@@ -720,7 +713,12 @@ exported_files = include/sf_dynamic_common.h \
 	ssl_common/ssl_config.c ssl_common/ssl_session.h \
 	ssl_common/ssl_inspect.h ssl_common/ssl_inspect.c \
 	ssl_common/ssl_ha.h ssl_common/ssl_ha.c libs/sfparser.c \
-	$(am__append_5)
+	$(SFXHASH_EXPORTED_FILES)
+@FEAT_FILE_INSPECT_TRUE@@FEAT_OPEN_APPID_FALSE@SFXHASH_EXPORTED_FILES_DEF = SFXHASH_EXPORTED_FILES
+@FEAT_OPEN_APPID_TRUE@SFXHASH_EXPORTED_FILES_DEF = SFXHASH_EXPORTED_FILES
+SFXHASH_EXPORTED_FILES_DEF = include/sfprimetable.h include/sfxhash.h include/sfmemcap.h include/sfhashfcn.h \
+				  include/md5.h 
+
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -1223,6 +1221,7 @@ uninstall-am: uninstall-local uninstall-nodist_preprocHEADERS \
 
 .PRECIOUS: Makefile
 
+
 @SO_WITH_STATIC_LIB_TRUE@all-local: $(LTLIBRARIES)
 @SO_WITH_STATIC_LIB_TRUE@	$(MAKE) DESTDIR=`pwd`/build install-preproclibLTLIBRARIES
 
@@ -1456,41 +1455,41 @@ include/sip_common.h: $(srcdir)/../preprocessors/sip_common.h
 include/appId.h: $(srcdir)/appid/appId.h
 	@src_header=$?; dst_header=$@; $(copy_headers)
 
-@FEAT_OPEN_APPID_TRUE@include/md5.c: $(srcdir)/../sfutil/md5.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers)
+include/md5.c: $(srcdir)/../sfutil/md5.c
+	@src_header=$?; dst_header=$@; $(copy_headers)
 
-@FEAT_OPEN_APPID_TRUE@include/md5.h: $(srcdir)/../sfutil/md5.h
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers)
+include/md5.h: $(srcdir)/../sfutil/md5.h
+	@src_header=$?; dst_header=$@; $(copy_headers)
 
-@FEAT_OPEN_APPID_TRUE@include/sfprimetable.h: $(srcdir)/../sfutil/sfprimetable.h
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfprimetable.h: $(srcdir)/../sfutil/sfprimetable.h
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfprimetable.c: $(srcdir)/../sfutil/sfprimetable.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfprimetable.c: $(srcdir)/../sfutil/sfprimetable.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfxhash.h: $(srcdir)/../sfutil/sfxhash.h
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfxhash.h: $(srcdir)/../sfutil/sfxhash.h
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfxhash.c: $(srcdir)/../sfutil/sfxhash.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfxhash.c: $(srcdir)/../sfutil/sfxhash.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfghash.c: $(srcdir)/../sfutil/sfghash.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfghash.c: $(srcdir)/../sfutil/sfghash.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfmemcap.h: $(srcdir)/../sfutil/sfmemcap.h
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers);  $(copy_error_message); $(replace_policy_globals)
+include/sfmemcap.h: $(srcdir)/../sfutil/sfmemcap.h
+	@src_header=$?; dst_header=$@; $(copy_headers);  $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfmemcap.c: $(srcdir)/../sfutil/sfmemcap.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfmemcap.c: $(srcdir)/../sfutil/sfmemcap.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sfhashfcn.c: $(srcdir)/../sfutil/sfhashfcn.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sfhashfcn.c: $(srcdir)/../sfutil/sfhashfcn.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sflsq.h: $(srcdir)/../sfutil/sflsq.h
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sflsq.h: $(srcdir)/../sfutil/sflsq.h
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
-@FEAT_OPEN_APPID_TRUE@include/sflsq.c: $(srcdir)/../sfutil/sflsq.c
-@FEAT_OPEN_APPID_TRUE@	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
+include/sflsq.c: $(srcdir)/../sfutil/sflsq.c
+	@src_header=$?; dst_header=$@; $(copy_headers); $(copy_error_message); $(replace_policy_globals)
 
 clean-local:
 	rm -rf include build
