--- a/tools/control/Makefile.am
+++ b/tools/control/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS=foreign
-bin_PROGRAMS = snort_control snort_dump_packets_control
+bin_PROGRAMS = snort_control snort_dump_packets_control snort_control_reload
 
 docdir = ${datadir}/doc/${PACKAGE}
 
@@ -8,6 +8,9 @@ snort_control_CFLAGS = @CFLAGS@ $(AM_CFLAGS)
 
 snort_dump_packets_control_SOURCES = snort_dump_packets.c
 snort_dump_packets_control_CFLAGS = @CFLAGS@ $(AM_CFLAGS)
+
+snort_control_reload_SOURCES = snort_control_reload.c
+snort_control_reload_CFLAGS = @CFLAGS@ $(AM_CFLAGS)
 
 INCLUDES = @INCLUDES@ @extra_incl@
 
