--- a/src/dynamic-preprocessors/file/Makefile.in
+++ b/src/dynamic-preprocessors/file/Makefile.in
@@ -118,7 +118,8 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(dynamicpreprocessordir)"
 LTLIBRARIES = $(dynamicpreprocessor_LTLIBRARIES)
 @SO_WITH_STATIC_LIB_TRUE@libsf_file_preproc_la_DEPENDENCIES =  \
-@SO_WITH_STATIC_LIB_TRUE@	../libsf_dynamic_preproc.la
+@SO_WITH_STATIC_LIB_TRUE@	../libsf_dynamic_preproc.la \
+@SO_WITH_STATIC_LIB_TRUE@	../libsf_dynamic_utils.la
 am_libsf_file_preproc_la_OBJECTS = libsf_file_preproc_la-spp_file.lo \
 	libsf_file_preproc_la-file_agent.lo \
 	libsf_file_preproc_la-file_event_log.lo \
@@ -342,7 +343,7 @@ dynamicpreprocessor_LTLIBRARIES = libsf_file_preproc.la
 @HAVE_S3FILE_FALSE@HAVE_S3FILE = 
 @HAVE_S3FILE_TRUE@HAVE_S3FILE = "-DHAVE_S3FILE"
 libsf_file_preproc_la_LDFLAGS = -export-dynamic -module $(LS3) $(LXML2)  @XCCFLAGS@
-@SO_WITH_STATIC_LIB_TRUE@libsf_file_preproc_la_LIBADD = ../libsf_dynamic_preproc.la 
+@SO_WITH_STATIC_LIB_TRUE@libsf_file_preproc_la_LIBADD = ../libsf_dynamic_preproc.la ../libsf_dynamic_utils.la
 @SO_WITH_STATIC_LIB_FALSE@nodist_libsf_file_preproc_la_SOURCES = \
 @SO_WITH_STATIC_LIB_FALSE@../include/sf_dynamic_preproc_lib.c \
 @SO_WITH_STATIC_LIB_FALSE@../include/sfPolicyUserData.c
