:bug: Fix no opimization foce in configure
Snort 2.9.8.2->2.9.8.3 introduces a bug that forces no-optimization in
configure & configure.in, so no matters how you call configure, it will
always set -O0 to CFLAGS.

This commit will revert this issue, and optimizations will apply.

--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@ AM_CONFIG_HEADER(config.h)
 # definition in "src/win32/WIN32-Includes/config.h"
 AM_INIT_AUTOMAKE(snort,2.9.8.3)
 
-NO_OPTIMIZE="yes"
+NO_OPTIMIZE="no"
 
 AC_PROG_CC_STDC
 AC_PROG_CC
