--- a/Makefile.in
+++ b/Makefile.in
@@ -372,7 +372,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
-SUBDIRS = src doc etc templates rpm m4 preproc_rules tools
+SUBDIRS = src doc etc templates m4 preproc_rules tools
 EXTRA_DIST = ChangeLog snort.8 LICENSE verstuff.pl RELEASE.NOTES snort.pc.in VERSION
 man_MANS = snort.8
 DISTCLEANFILES = stamp-h.in cflags.out cppflags.out
